duniverse/menhirLib.20200211/test/static/bad/lots-of-errors-a.mly
( idiot )
%token HOP

%%

main: HOP BAZ QUUX { () }

