duniverse/menhirLib.20200211/test/static/bad/lots-of-errors-a.exp
File "lots-of-errors-a.mly", line 1, characters 0-1:
Error: syntax error before '('.
Either a declaration or '%%' is expected at this point.
